deploy/socialnetwork/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: social-network
  labels:
    istio-injection: enabled
