deploy/socialnetwork/kubernetes/test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: social-network-test
