deploy/socialnetwork/kubernetes/gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: social-network
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
  type: LoadBalancer
  selector:
    app: gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: social-network
spec:
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
      name: gateway
      namespace: social-network
    spec:
      containers:
      - name: server
        image: waterlemongan/microless-socialnetwork-gateway:0.3.0
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: "/config"
          readOnly: true
        resources:
          limits:
            cpu: "2"
            memory: 512Mi
          requests:
            cpu: "1"
            memory: 512Mi
      volumes:
        - name: config
          configMap:
            name: config
            items:
            - key: config.json
              path: config.json
            - key: lb.json
              path: lb.json
